fix overflow in mobile

--- a/css/common/nav.css
+++ b/css/common/nav.css
@@ -56,6 +56,9 @@ nav{
     html{
         overflow-x: hidden;
     }
+    body{
+        overflow-x: hidden;
+    }
     .nav-links{
         position:absolute;
         right:0px;
