--- a/css/home/grid-container.css
+++ b/css/home/grid-container.css
@@ -5,12 +5,13 @@
 .grid-container{
     max-width:100vw;
     min-height:100vh;
+    max-width:100%;
     display:grid;
     grid-template: "nav"
                    "jumbotron"
                     "contact"
                     "footer";
-    grid-template-columns: auto;
+    grid-template-columns: 100%;
     grid-template-rows: 8vh 10fr 4fr 8vh;
  
 }
@@ -24,7 +25,7 @@ nav{
     background-image: url('../../images/home/jumbotronimage.jpg');
     background-position: center center;
     background-size:cover;
-
+    max-width:100%;
     position:relative;
 }
 
@@ -43,7 +44,8 @@ nav{
     text-align: center;
 }
 .contact h2{
-    margin:3rem;
+    margin:2rem;
+    font-size:1.3rem;
 }
 
 footer{
